--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap-vue": "^2.13.1",
     "lodash": "^4.17.15",
     "vue": "^2.5.11",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   },
   "browserslist": [
     "> 1%",
@@ -31,7 +33,6 @@
     "file-loader": "^1.1.4",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^3.6.0"
   }
 }
