--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.13.1",
+    "express": "^4.16.2",
     "lodash": "^4.17.15",
     "vue": "^2.5.11",
-    "vue-router": "^2.3.1",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "vue-router": "^2.3.1"
   },
   "browserslist": [
     "> 1%",
