--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-loader": "^1.1.4",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-cli": "^4.3.1"
   }
 }
